--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm install",
+    "build": "echo 'No build step needed'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,9 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
-}
 
+}
